--- a/src/Range.css
+++ b/src/Range.css
@@ -2,27 +2,11 @@
     position: relative;
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .Range_Display {
     color: white;
-    font-size: 2rem;
+    font-size: var(--iconSize);
     padding: 10px;
-}
-
-.Range_Button {
-    font-size: 2rem;
-    padding: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    background-color: transparent;
-    border: 0;
-    cursor: pointer;
-}
-
-.Range_Button:hover {
-    color: gray;
 }
